--- a/src/App.css
+++ b/src/App.css
@@ -1,458 +1,38 @@
-body {
-  background: #F1F2F5;
-  white-space: nowrap;
- 
-left:-100px;
+.App {
+  text-align: center;
 }
 
-.test {
-  box-sizing: border-box;
-  width: 100%;
-  height: 10px;
-  border: 2px solid black;
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
 }
-.black {
 
-justify-content: space-between;
-align-items: center;
-
-  position: absolute;
-  z-index: 1;
-width: 100%;
-height: 64px;
-left: 0px;
-top: 0px;
-
-background: #000C17;
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
-.sidebar{
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
   display: flex;
-flex-direction: column;
-align-items: flex-start;
-padding: 4px 0px;
-gap: 4px;
-
-position: absolute;
-width: 236px;
-height: 784px;
-left: 0px;
-top: 80px;
-
-/* Gray / gray-1 */
-
-
-box-shadow: inset -1px 0px 0px #F0F0F0;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
-.dashboard {
-  position: absolute;
-  background: #F1F2F5;
-  width: 1204px;
-  
-height: 24px;
-display: flex;
-flex-direction: column;
-align-items: flex-start;
-
-
-
-gap: 8px;
-}
-.title {
-  position: absolute;
-
- 
-
-margin-bottom: 24px;
-margin-left: 24px;
-  width: 1000px;
-height: 24px;
-
-
-/* Regular/20px | 28px */
-white-space: inherit;
-
-
-
-font-style: normal;
-font-weight: 400;
-font-size: 20px;
-line-height: 28px;
-
-align-items: center;
-
-/* Gray/gray-9 */
-
-color: #3D4961;
-flex: none;
-order: 1;
-flex-grow: 0;
-}
-.image {
-  width: 1204px;
-height: 196px;
-
-margin-top: 10px;
-/* Inside auto layout */
-
-flex: none;
-order: 1;
-flex-grow: 0;
-position:absolute;
-
-top: 76px;
-
-
-}
-.head {
-  position: absolute;
-height: 24px;
-left: 24px;
-
-top: 354px;
-
-
-font-style: normal;
-font-weight: 600;
-font-size: 16px;
-line-height: 26px;
-
-/* or 162% */
-
-
-/* Grey / grey-9 */
-
-color: #506080;
-
-}
-.input {
-  box-sizing: border-box;
-
-position: absolute;
-top: 395px;
-left: 24px;
-width: 410px;
-height: 40px;
-margin-top: 17px;
-padding-left: 10px
-;
-/* Grey/grey-1 */
-font-size: medium;
-color: #7A8AAC;
-background: #FFFFFF;
-/* Blue / blue-5 */
-font-family:'Open Sans',sans-serif ;
-border: 1px solid #379FFF;
-/* Input Focus */
-
-box-shadow: 0px 0px 4px rgba(24, 144, 255, 0.5);
-outline-color: #379FFF;
-border-radius: 4px;
+.App-link {
+  color: #61dafb;
 }
 
-
-.select {
-  box-sizing: border-box;
-
-position: absolute;
-top: 412px;
-
-
-/* Gray / gray-1 */
-
-background: #FFFFFF;
-/* Daybreak Blue / blue-5 */
-padding-left: 12px;
-border: 1px solid #40A9FF;
-/* Input Focus */
-appearance: none;
-font-family:'Open Sans',sans-serif ;
-box-shadow: 0px 0px 4px rgba(24, 144, 255, 0.5);
-width: 250px;
-height: 40px;
-margin-left: 29px;
-border-radius: 4px;
-
-
-
-
-
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 22px;
-
-}
-
-  
-  /* Gray / gray-6
-  
-  Disable
-  */
-
-
-.button1{
-  position: absolute;
-width: 97px;
-height: 40px;
-
-left: 748px;
-
-
-top: 413px;
-
-margin-left: 29px;
-
-
-
-
-
-
-/* Blue / blue-5 */
-
-background: #379FFF;
-}
-.button{
-  
-
-position: absolute;
-margin-left: 11px;
-margin-top: 9px;
-
-/* Semibold / 16 px | 22 px */
-
-
-font-style: normal;
-font-weight: 600;
-font-size: 16px;
-line-height: 22px;
-/* identical to box height, or 138% */
-
-display: flex;
-align-items: center;
-text-align: center;
-background-color: transparent;
-border: transparent;
-
-/* Grey/grey-1 */
-
-color: #FFFFFF;
-}
-.card {
-  box-sizing: border-box;
-
-position: absolute;
-left: 24px;
-
-
-top: 460px;
-
-height: 388px;
-
-
-
-
-
-width: 100%;
-display: flex;
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-margin-top: 25px;
-flex: none;
-order: 1;
-flex-grow: 0;
-position:absolute;
-
-
-/* Grey/grey-1 */
-
-background: #FFFFFF;
-/* Grey/grey-5
-
-Border
-*/
-border: 1px solid #D8DDE6;
-border-radius: 2px;
-}
-.cardhead{
-  margin-top: -4px;
-  position: absolute;
-height: 24px;
-left: 24px;
-right: 67px;
-top: 16px;
-
-
-font-style: normal;
-font-weight: 600;
-font-size: 16px;
-line-height: 24px;
-/* identical to box height, or 150% */
-
-background: #FFFFFF;
-/* Grey / grey-9 */
-
-color: #506080;
-}
-
-::placeholder {
-  position: absolute;
-height: 24px;
-left: 12px;
-right: 32px;
-top: calc(50% - 24px/2);
-
-
-
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 22px;
-/* or 138% */
-
-display: flex;
-align-items: center;
-
-/* Grey / grey-6 */
-
-color: #AEB8CC;
-}
-.option1 {
-  position: absolute;
-height: 24px;
-left: 12px;
-right: 32px;
-top: calc(50% - 24px/2);
-
-/* Regular / 16 px | 22 px */
-
-
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 22px;
-/* or 138% */
-
-display: flex;
-align-items: center;
-
-color: #7A8AAC;
-}
-option{
-  position: absolute;
-height: 24px;
-left: 12px;
-right: 32px;
-top: calc(50% - 24px/2);
-
-/* Regular / 16 px | 22 px */
-
-
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 22px;
-/* or 138% */
-
-display: flex;
-align-items: center;
-
-color: #7A8AAC;
-}
-i{
-  position: absolute;
-  top: 422px;
-left:950px;
-
-
-z-index: 1;
-background-color:#FFFFFF;
-color: #7A8AAC;;
-}
-
-.ant-select-search--inline .ant-select-search__field {
-  width: 100%;
-  height: 100%;
-  font-size: 100%;
-  line-height: 1;
-  background: transparent;
-  border-width: 0;
-  border-radius: 4px;
-  outline: 0;
-}
-.circle{
-  position: absolute;
-  
-  top:423.12px;
-  left: 407.12px;
-  
-}
-.subhead {
-  position: absolute;
-  height: 24px;
-  left: 46px;
-  right: 588px;
-  top: 527px;
-  
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 26px;
-  /* or 162% */
-  
-  
-  /* Grey / grey-9 */
-  
-  color: #506080;
-}
-
-.sub{
-  position: absolute;
-height: 26px;
-left: 220px;
-
-top: 527px;
-
-font-family: 'Open Sans';
-font-style: normal;
-font-weight: 700;
-font-size: 16px;
-line-height: 26px;
-/* identical to box height, or 162% */
-
-text-align: center;
-
-/* Green/green-6 */
-
-color: #0BA968;
-}
-
-.dig {
-  position: absolute;
-  top: 527px;
-  left : 50px;
-}
-
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-
-/* Firefox */
-input[type=number] {
-  -moz-appearance: textfield;
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
