--- a/src/Card.css
+++ b/src/Card.css
@@ -52,3 +52,26 @@ text-align: center;
 
 color: #0BA968;
 }
+.ant-card-head-title {
+    
+
+
+font-family: 'Open Sans';
+font-style: normal;
+font-weight: 600;
+font-size: 16px;
+line-height: 26px;
+/* or 162% */
+
+
+/* Grey / grey-9 */
+
+color: #506080;
+  }
+  
+  
+  
+  
+  
+  
+  
