--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,7 @@ body {
 left:-100px;
 }
 
-.test {
-  box-sizing: border-box;
-  width: 100%;
-  height: 10px;
-  border: 2px solid black;
-}
+
 .black {
 
 justify-content: space-between;
@@ -18,7 +13,7 @@ align-items: center;
 
   position: absolute;
   z-index: 1;
-width: 100%;
+width: 20px;
 height: 64px;
 left: 0px;
 top: 0px;
